# ocaml_template_engine

./: README.md  dune  dune-project  lexer.ml  lexer.mli  model.ml  model.mli  parser.mly  render.ml  render.mli  template.ml  template.mli  template_builder.ml  template_builder.mli  template_engine.ml  template_engine.opam  test.ml  ustring.ml  utilities.ml  utilities.mli
examples/: .merlin  dune  main.ml  template.ote
test/: test.ote
