opam-version: "2.0"
name: "template_engine"
version: "0.1"
synopsis: "Simple template engine for OCaml"
description: """
Simple template engine for OCaml
"""
maintainer: "Emile Trotignon emile.trotignon@gmail.com"
authors: "Emile Trotignon emile.trotignon@gmail.com"
license: "MIT"
homepage: "None yet"
bug-reports: ""
dev-repo: ""
depends: [ "ocaml" "ocamlfind" ]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]