opam-version: "2.0"
name: "template_engine"
version: "0.1"
synopsis: "Simple template engine for OCaml"
description: """
Simple template engine for OCaml
"""
maintainer: "Emile Trotignon emile.trotignon@gmail.com"
authors: "Emile Trotignon emile.trotignon@gmail.com"
license: "MIT"
homepage: "https://emiletrotignon.github.io/ocaml_template_engine/"
bug-reports: "https://github.com/EmileTrotignon/ocaml_template_engine/issues"
dev-repo: ""
depends: [ "ocaml" "ocamlfind" "dune" "sedlex" "core" "uutf" "menhir" "ppxlib" "containers"]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]